tests/fails/niltype2.t
require("fail")


terra bar()
	var a : A
end

bar:compile()
